--- a/code/style.css
+++ b/code/style.css
@@ -71,6 +71,7 @@ nav {
   -ms-transform: scale(0.99);
   transform: scale(0.99);
   transition: 0.5s ease;
+  box-shadow: 15px 15px black;
 }
 
 .big-news-text {
@@ -106,6 +107,7 @@ nav {
   -ms-transform: scale(0.97);
   transform: scale(0.97);
   transition: 0.5s ease;
+  box-shadow: 15px 15px black;
 }
 
 .news-img {
@@ -129,6 +131,7 @@ nav {
   -ms-transform: scale(0.97);
   transform: scale(0.97);
   transition: 0.5s ease;
+  box-shadow: 15px 15px #FF70A6;
 }
 
 .interview-headline {
