--- a/code/style.css
+++ b/code/style.css
@@ -5,6 +5,9 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
 h1 {
@@ -17,12 +20,23 @@ h3 {
   text-align: center;
 }
 
+.big-news-container:hover {
+  box-shadow: -1px 10px 25px -6px rgba(34, 64, 135, 0.61);
+}
+
+.small-news-container:hover {
+  box-shadow: -1px 10px 25px -6px rgba(34, 64, 135, 0.61);
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
 /* HEADER */
 
 nav {
   background-color: #7C8BAD;
   height: 140px;
-  width: 100%;
   display: flex;
   align-items: center;
   padding: 0 16px;
@@ -67,7 +81,8 @@ nav a {
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
-  margin: 30px 20px 0 20px;
+  margin: 40px auto;
+  width: 90%;
 }
 
 .big-news-container {
@@ -88,7 +103,8 @@ nav a {
   color: black;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  margin: 0 auto;
+  width: 90%;
 }
 
 .small-news-container {
@@ -98,7 +114,6 @@ nav a {
   background: white;
   font-family: 'Montserrat', sans-serif;
   margin: 0 20px 60px 20px;
-  /* width: 200px; */
 }
 
 /* MEDIA QUERIES */
