Added img classes and widths

--- a/code/style.css
+++ b/code/style.css
@@ -29,6 +29,19 @@ section {
   background-color: red;
 }
 
+figure.big-news {
+background-color: white;
+width: 500px;
+padding: 20px;
+}
+
+img.big-news {
+  width: 500px;
+}
+
+img.small-news {
+  width: 500px;
+}
 
 /*Styling for mobile phone*/
 @media (max-width: 667px) {
