--- a/code/style.css
+++ b/code/style.css
@@ -172,11 +172,19 @@ html {
     justify-content: center;
   }
   .main {
-    padding-top:40px;
+    padding-top:20px;
   }
   .big-news {
     margin:10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px lightgrey;
   }
+
+  .big-news-item1 {
+    margin: 10px;
+    border-radius: 10px;
+  }
+
   #big-news-h1 {
     text-align: center;
     font-size: 20px;
@@ -184,21 +192,47 @@ html {
   #big-news-p {
     font-size: 14px;
   }
-  .footer {
-    font-size: 10px;
-  }
+  
   .other-news {
     padding-top:10px;
     padding-bottom: 40px;
     background-color: #C5E3D5;
   }
+
   .other-news-item {
     padding: 0 0 2px 0;
     background-color:#E2F3EB;
     margin: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px lightgrey;
   }
+
   .other-news-item h3 {
     font-size: 15px;
+  }
+
+  #first {
+    width:95%;
+    margin: 10px;
+  }
+  
+  #second {
+    width:95%;
+    margin: 10px;
+  }
+  
+  #third {
+    width:95%;
+    margin: 10px;
+  }
+  
+  #fourth {
+    width:95%;
+    margin: 10px;
+  }
+
+  .footer {
+    font-size: 10px;
   }
 }
 
@@ -224,17 +258,21 @@ html {
 
   .big-news-item1 {
     width: 55%;
-    height: 276px;
+    height: 280px;
     padding: 11px;
     background-color:#E2F3EB;
+    border-radius: 10px 0px 0px 10px;
+    box-shadow: 5px 5px lightgrey;
   }
  
   .big-news-item2 {
     width: 35%;
-    height: 276px;
+    height: 280px;
     padding: 11px;
     background-color:#E2F3EB;
-   
+    overflow: hidden;
+    border-radius: 0 10px 10px 0;
+    box-shadow: 5px 5px lightgrey;
   }
 
   #big-news-h1 {
@@ -256,6 +294,8 @@ html {
     width: 45%;
     margin: 4px;
     padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px lightgrey;
   }
 }
 
@@ -265,6 +305,8 @@ html {
     justify-content: flex-start;
     margin: 1%;
     padding: 1%;
+    border-radius: 10px;
+    box-shadow: 5px 5px lightgrey;
   }
 
   .big-news-item1 {
@@ -296,6 +338,8 @@ html {
     justify-content: center;
     margin: 1%;
     padding: 1%;
+    border-radius: 10px;
+    box-shadow: 5px 5px lightgrey;
   }
 }
 
