Added: all cards in mobile view  and section line

--- a/code/style.css
+++ b/code/style.css
@@ -90,7 +90,7 @@ nav ul li.items:hover:after {
 /*** MAIN CONTENT ***/
 
 .cards-container {
-  height: 4400px;
+  height: 4600px;
   background: linear-gradient(
     180deg,
     #b97272 0%,
@@ -140,7 +140,7 @@ img {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
 }
 
-/* .rubrique {
+.rubrique {
   color: white;
   font-family: Rajdhani, sans-serif;
   font-size: 1.5rem;
@@ -150,9 +150,9 @@ img {
 
 .line {
   border: 1px solid white;
-  width: 34em;
+  width: 28em;
   margin-bottom: 15px;
-} */
+}
 
 /*** OTHER ARTICLES ***/
 
