--- a/code/style.css
+++ b/code/style.css
@@ -1,47 +1,150 @@
-*{
-  /*Makes sure that all elements include the content, padding and border in the width and height property*/
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Livvic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 body {
-  background: #dbdce6;
-  color:#000000;
-  font-family: 'Livvic', sans-serif;
-  font-size: 16px;
+    background-color: #ebe3e3;
+    color: #272525;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    /*display: flex; /*början på flexbox*/
 }
 
-.header {
-  background-color: #1a1919;
-  padding: 30px 10px;
-  border: 2px solid white;
-  margin: 0px;
-  color:#f7f5f0;
-  
-}
-.header-title h1 {
-  font-family: 'Pacifico', cursive;
-  color:#f7f5f0;
-  font-size: 20px;
-  text-align: left;
+h2{
+    font-size: 30px;
+    line-height: 22px; /*** Kolla upp ***/
 }
 
-.nav-container {
-  padding: 10;
-  border: 2px solid white;
-  display: flex;
-  flex-direction: row-reverse;
-  
-  
+h3 {
+    font-size: 25px;
 }
 
-.nav-button{
-  padding: 5px;
-  list-style: none;
-  text-align: center;
-  border: 2px solid white;
+h4 {
+    font-size: 18px;
 }
 
+/*** HEADER ***/
 
+header{
+    background-color: #2c2929;
+    height: 80px;
+    display: flex;
+    align-items: center; /* items in middle of header (not middle of middle)*/
+    padding: 0 15px; /* on the left and right sides*/
+}
 
+.menu-mobile { /*phone screen menu container square*/
+    display: flex;
+    width: 30px;
+    height: 30px;
+    flex-direction: column; /* för på rad ner*/
+    justify-content: space-between;/* space between all lines*/
+    margin-right: 5px; /* space between menu and logo (here becaus of phone tablet not on logo so it will affect other screens)*/
+}
+
+.menu-mobile div{ /*phone screen menu lines square*/
+    width: 30px;
+    height: 3px;
+    background-color: #ebe3e3;
+    border-radius: 5px; /* round edges*/
+}
+
+header img {
+    width: 90px;
+    }
+
+nav { /*not displayed in phone screen*/
+  display: none;
+}
+
+nav a {
+    color: #ebe3e3;
+    text-decoration: none;
+    margin: 0px 10px; /*to not mess with the right side of the margin*/
+}
+
+/*** BIG NEWS SECTION ***/
+.big-news-container{
+    padding: 70px 30px;
+    display: flex;
+    flex-direction: column; /*** Under varandra på rad ***/
+    /*xwidth: 100%;*/
+    max-width: 1100px; /*so it dosent expand on really wide screens*/
+    margin: 0 auto;
+
+}
+
+.big-news-container img {
+    width: 100%; /*** anpassar sig efter skärm***/
+
+}
+
+.big-news-container div{
+    text-align: center; /*** text under centrera***/
+
+}
+
+/*** SMALL NEWS SECTION ***/
+
+.small-news-container {
+    background-color: #fcfcfc;
+    text-align: center; /*** align text to center***/
+    padding: 30px;
+    color: #2c2c2c;
+}
+
+.small-news{
+    display: flex;
+    flex-wrap: wrap; /*KOLLA UPP*/
+    padding: 20;
+}
+
+.small-news a {
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 2%; /*kanterna runt mjuka*/ 
+    width: 100%; /*take upp all space - the cards*/
+    text-decoration: none;
+    color: #6d6d6d;
+    box-shadow: 5px 5px 0 0 #ebe3e3;
+    margin-bottom: 32px;
+}
+
+.small-news img {
+   width: 100%;
+   border-radius: 5%;
+
+}
+
+/*** MEDIA QUERIES ***/
+
+@media (min-width: 650px){
+
+    header{
+        justify-content: space-between;/*space between content navbar*/
+    }
+
+    nav{
+        display: inline-block; /*navbar shown with inline-block (kolla upp)*/
+    }
+
+    .menu-mobile{
+        display:none; /*mobile menu not shown*/
+    }
+}
+
+@media (min-width: 900px){
+    .big-news-container {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .big-news-container img {
+        width: 90%; /*smaller image*/
+    }
+
+    .small-news img {
+        width: 50%;
+    }
+
+}
