add a header class

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,30 @@
 html {
-  background: #0025ff;
+  background: #36806a;
   color: #fff;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.header {
+  background: rgb(23, 46, 23);
+  padding: 40px;
+  margin: 0px 0px 0px 0px;
+  justify-content: space-between;
+  display: flex;
+}
+
+.introduction {
+  width: 100px;
+  height: 100px;
+  border: 40px;
+  border-color: pink;
+
+}
+
+.nav {
+  display: block;
+  padding: 50px;
+  margin: 60px;
+  
+
+
 }
